[package]
name = "rustie-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
actix-web = "4"
tokio = { version = "1.35", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"